General App Updates

--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome to Vinyl Closet</h1>
 <h2>Your one-stop-shop for all the best musical gems on vinyl.</h2>
+<%= image_tag("vinyl.jpg", class: "img-responsive bike-image") %>
+    
