--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,5 +1,8 @@
 // Place all the styles related to the simple_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #333;
+h1 {
+  color: blue;
+  font-family: serif;
+  text-align: center;
+}
