--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,5 +1,5 @@
 .hero
-  background-image: url(<%= asset_path 'vinyl_image.jpg' %>) } ;
+  background-image: asset-url("vinyl_image.jpg");
   background-image: no-repeat;
   position: relative;
   -webkit-background-size: cover;
