--- a/app/views/simple_pages/application.css
+++ b/app/views/simple_pages/application.css
@@ -15,6 +15,8 @@
  */
 
 
+
+
  * {
    box-sizing: border-box;
  }
@@ -66,13 +68,7 @@
    content: "";
    display: block;
  }
-
- .row .content {
-   margin-left: 0;
-   margin-right: 0;
- }
-
-   } .site-footer, .page-wrap:after {
+ .site-footer, .page-wrap:after {
    /* .push must be the same height as footer */
      height: 8%;
  }
