--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -10,10 +10,11 @@
 
 
 <%= image_tag("vinyl_6.jpg", class: "img-responsive vinyl-6", style: "object-align:center") %>
-
+<div class="page wrap">
   <div class="row content">
       <h1 class="sec01">Why do we sell vinyl?</h1>
       <p>At Vinyl Closet we believe in one thing: music. Our collective admiration for musical artists from around the world has lead us to the pursuit of musical sharing. Afterall. what is life without song?</p>
       <h1 class="sec02">Who are we, anyhow?</h1>
       <p>Call us critics. Call us hipsters. Call us your new best friends. We are a collective group of music junkies who nerd out over the latest releases and sift through bins of vinyl in thrift stores, just to hear something new. We are you.</p>
   </div>
+</div>
