--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,11 +67,10 @@
    display: block;
  }
 
- @mixin make-row() {
-   display: flex;
-   flex-wrap: wrap;
- }
- 
+.row {
+  display: block;
+}
+
    } .site-footer, .page-wrap:after {
    /* .push must be the same height as footer */
      height: 8%;
