--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,10 +67,13 @@
    display: block;
  }
 
-.row {
-  display: block;
-}
-
+ .row {
+     display: flex;
+     flex-wrap: wrap;
+     margin-right: 0px !important;
+     margin-left: 0px !important;
+ }
+ 
    } .site-footer, .page-wrap:after {
    /* .push must be the same height as footer */
      height: 8%;
