--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,9 +1,9 @@
 .hero {
-  background-image: image-url('vinyl_image.jpg'); 
+  background-image: image-url('vinyl_image.jpg');
   background-image: no-repeat;
   position: relative;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
+  margin-left: 0px;
+  margin-right: 0px;
   background-size: cover;
   text-align: center;
   color: #fff;
