Adding Price Column

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :colour %><br>
-    <%= f.text_field :colour %>
+    <%= form.label :price %><br>
+    <%= form.text_field :price %>
  </div>
 
   <div class="actions">
