--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.image_url %></td>
-        <td><%= product.colour %></td>
+        <td><%= product.price %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -28,6 +28,18 @@
   </tbody>
 </table>
 
+
+  <div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm">
+        <a href="#"><h1><%= product.name %></h1></a>
+        <p><%= product.description %></p>
+        <strong>$278</strong>
+      </div><!-- /col -->
+    <% end %>
+  </div>
+</div>
 <br>
 
 <%= link_to 'New Product', new_product_path %>
