--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,36 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
-
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Colour</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-
-
+<h1 class="product-title">Explore Our Vinyl!</h1>
 
 <div class="container-fluid">
   <div class="row">
@@ -39,7 +9,7 @@
         <%= image_tag(product.image_url, class: "img-fluid") %>
         <a href="#"><h1><%= product.name %></h1></a>
         <p><%= product.description %></p>
-        <strong><%= product.price %></strong>
+        <p id="price-text"><%= product.price %></p>
       </div><!-- /col -->
     <% end %>
   </div>
