--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="Shop" role="button" data-toggle="Shop" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#notice" id="Shop" role="button" data-toggle="Shop" aria-haspopup="true" aria-expanded="false">
             Shop
           </a>
           <div class="dropdown-menu" aria-labelledby="Work">
