Cleaning Up with Partials

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,12 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
-      <div class="col-sm">
-        <%= image_tag(product.image_url, class: "img-fluid") %>
-        <a href="#"><h1><%= product.name %></h1></a>
-        <p><%= product.description %></p>
-        <p id="price-text"><%= product.price %></p>
-      </div><!-- /col -->
+    <%= render partial: "shared/product", collection: @products %>
     <% end %>
   </div>
 </div>
