--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,7 +68,7 @@
 
 
 
-   } .site-footer, .page-wrap:after {
+ .site-footer, .page-wrap:after {
    /* .push must be the same height as footer */
      height: 8%;
  }
