--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,6 +1,6 @@
 <% @products.each do |product| %>
     <div class="col-sm">
-      <%= image_tag('', class: "img-fluid") %>
+       <%= image_tag(product.image_url, class: "img-fluid") %>
       <h1><%= link_to product.name, product %></h1>
       <p><%= product.description %></p>
       <strong>$ <%= product.price %></strong>
