--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <% @products.each do |product| %>
+    <% @products do |product| %>
     <%= render partial: "shared/product", collection: @products %>
     <% end %>
   </div>
