--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -12,13 +12,17 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat|Cardo' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
 
+<div class="parallax">
+    <h1><span>Welcome to</span><br>Vinyl Closet</h1>
+    <div class="mouse">
+        <span></span>
+    </div>
 
+</div>
 
-<div class="container">
-   <h2 id="product">Featured Products:</h2>
-   </div>
+<h2 style="text-align:center">Dig into our closet and find all the best musical gems on vinyl.</h2>
 
-   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
      <ol class="carousel-indicators">
        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -44,3 +48,11 @@
      <span class="sr-only">Next</span>
    </a>
  </div>
+<div class="container">
+    <div class="row content">
+      <h1 class="sec01">Why do we sell vinyl?</h1>
+      <p>At Vinyl Closet we believe in one thing: music. Our collective admiration for musical artists from around the world has lead us to the pursuit of musical sharing. Afterall. what is life without song?</p>
+      <h1 class="sec02">Who are we, anyhow?</h1>
+      <p>Call us critics. Call us hipsters. Call us your new best friends. We are a collective group of music junkies who nerd out over the latest releases and sift through bins of vinyl in thrift stores, just to hear something new. We are you.</p>
+  </div>
+</div>
