--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,68 +15,74 @@
  */
 
 
- * {
-   box-sizing: border-box;
+
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    color: #8f8f8f;
+    background: white;
+    font-family: "Cardo", serif;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  h1 {
+    font-size: 30px;
+    line-height: 1.8;
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  p {
+    margin-bottom: 20px;
+    font-size: 17px;
+    line-height: 2;
+  }
+
+  .content {
+    padding: 50px 2% 250px;
+  }
+
+
+ .navbar {
+ font-family: "Montserrat", sans-serif;
  }
+
+  * {
+      margin: 0;
+  }
+  html, body {
+      height: 100%;
+  }
 
  body {
-   color: #8f8f8f;
-   background: white;
-   font-family: "Cardo", serif;
-   font-weight: 300;
-   -webkit-font-smoothing: antialiased;
+   margin: 0 !important;
  }
 
- a {
-   text-decoration: none;
- }
+  .page-wrap {
+    min-height: 100%;
+    /* equal to footer height */
+      margin-bottom: -142px;
+  }
+  .page-wrap:after {
+    content: "";
+    display: block;
+  }
+  .site-footer, .page-wrap:after {
+    /* .push must be the same height as footer */
+      height: 8%;
+  }
+  .site-footer {
+    background: black;
+  }
 
- h1 {
-   font-size: 30px;
-   line-height: 1.8;
-   text-transform: uppercase;
-   font-family: "Montserrat", sans-serif;
- }
-
- p {
-   margin-bottom: 20px;
-   font-size: 17px;
-   line-height: 2;
- }
-
- .content {
-   padding: 50px 2% 250px;
- }
-
-
-
-
- * {
-     margin: 0;
- }
- html, body {
-     height: 100%;
- }
- .page-wrap {
-   min-height: 100%;
-   /* equal to footer height */
- }
- .page-wrap:after {
-   content: "";
-   display: block;
- }
-
-
-
- .site-footer, .page-wrap:after {
-   /* .push must be the same height as footer */
-     height: 8%;
- }
- .site-footer {
-   background: black;
- }
-
- .site-footer p{
-   text-align: center !important;
-   vertical-align: center;
- }
+  .site-footer p{
+    text-align: center !important;
+    vertical-align: center;
+  }
