--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,4 +1,18 @@
-<div class="hero">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+
+
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+<%= csrf_meta_tags %>
+<link href='https://fonts.googleapis.com/css?family=Montserrat|Cardo' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
+
+<div class="parallax">
     <h1><span>Welcome to</span><br>Vinyl Closet</h1>
     <div class="mouse">
         <span></span>
@@ -8,8 +22,32 @@
 
 <h2 style="text-align:center">Dig into our closet and find all the best musical gems on vinyl.</h2>
 
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+     <ol class="carousel-indicators">
+       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+     </ol>
+   <div class="carousel-inner">
+     <% @products.each do |product| %>
+      <div class="carousel-item active><%= " active" if product == @products.first %>">
+     <%= image_tag(product.image_url) %>
 
-<%= image_tag("vinyl_6.jpg", class: "img-responsive vinyl-6", style: "object-align:center") %>
+       <div class="carousel-caption d-none d-md-block">
+         <%= product.name %>
+       </div>
+     </div>
+     <% end %>
+   </div>
+   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+     <span class="sr-only">Previous</span>
+   </a>
+   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <span class="sr-only">Next</span>
+   </a>
+ </div>
 <div class="container">
     <div class="row content">
       <h1 class="sec01">Why do we sell vinyl?</h1>
