--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,6 +54,10 @@
  font-family: "Montserrat", sans-serif;
  }
 
+ .navbar-expand-lg a{
+   position: center;
+ }
+
   * {
       margin: 0;
   }
@@ -86,3 +90,8 @@
     text-align: center !important;
     vertical-align: center;
   }
+
+
+
+
+/*New Product Form*/
