--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,18 +28,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/simple_pages/landing_page">Home <span class="sr-only">(current)</span></a>
+          <%= link_to 'Home',  simple_pages_landing_page_path%>
+        <span class="sr-only">(current)</span>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/simple_pages/about">About</a>
+          <%= link_to 'About',  simple_pages_about_path%>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/products">Shop</a>
+          <%= link_to 'Shop', products_path %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/simple_pages/contact">Contact</a>
+          <%= link_to 'Contact', simple_pages_contact_path %>
         </li>
           </div>
+
+          <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
+  <%= form.label :q, 'Search for:' %>
+  <%= form.text_field :q, id: 'q', value: params[:q] %>
+  <%= form.submit 'Search' %>
+<% end %>
   </nav> <!-- end nav container -->
 
   </head>
