--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -103,13 +103,48 @@ h2 {
 
 .carousel-caption {
   color: black;
-  text-align: center;
-  font-size: 2rem;
+  text-align: center !important;
+  font-size: 1rem;
   font-family: "Montserrat", sans-serif;
-
+  position: absolute;
+  padding-top: 450px !important;
+  height: 500px;
 }
 
-.carousel-item img{
-  align-items: center;
+
+
+.carousel {
+  width: 400px;
+  height: 600px;
+  margin: 0 auto;
+}
+
+.carousel-inner {
+  height: 500px;
+}
+.carousel-inner>.item>img {
+  margin: 0 auto;
+}
+
+div.c-wrapper {
+  width: 100%;
+  /* for example */
+  margin: auto;
+}
+
+.carousel-item  img {
   width: 400px !important;
+  padding-bottom: 100px;
+}
+
+.carousel-control-prev {
+  display: none !important;
+}
+
+.carousel-control-next {
+  display: none !important;
+}
+
+.carousel-indicators {
+  color: black;
 }
