--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :price %><br>
-    <%= form.text_field :price %>
+     <span id='price'><%= form.label :price %></span><br>
+    <span id='price-field'><%= form.text_field :price %></span>
  </div>
 
   <div class="actions">
