--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -22,19 +22,21 @@
 
 <h2 style="text-align:center">Dig into our closet and find all the best musical gems on vinyl.</h2>
 
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-     <ol class="carousel-indicators">
-       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-     </ol>
-   <div class="carousel-inner">
+
+<div class="c-wrapper">
+         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+           <ol class="carousel-indicators">
+             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+           </ol>
+         <div class="carousel-inner">
      <% @products.each do |product| %>
       <div class="carousel-item active><%= " active" if product == @products.first %>">
      <%= image_tag(product.image_url) %>
 
        <div class="carousel-caption d-none d-md-block">
-         <%= product.name %>
+        <a href ="/products" ><%= product.name %></a>
        </div>
      </div>
      <% end %>
@@ -48,6 +50,9 @@
      <span class="sr-only">Next</span>
    </a>
  </div>
+</div>
+
+
 <div class="container">
     <div class="row content">
       <h1 class="sec01">Why do we sell vinyl?</h1>
