--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: product, local: true) do |form| %>
+<%= form_with(model: product, local: true, class: 'product-form') do |form| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -12,26 +12,27 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :name, class: 'name-label' %>
+    <%= form.text_field :name, class: 'name' %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.label :description, class: 'text-label' %>
+    <%= form.text_area :description, class: 'text' %>
   </div>
 
   <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
+    <%= form.label :image_url, class: 'image-label' %>
+    <%= form.text_field :image_url, class: 'image' %>
   </div>
 
   <div class="field">
-     <span id='price'><%= form.label :price %></span><br>
-    <span id='price-field'><%= form.text_field :price %></span>
+     <span id='price'><%= form.label :price, class: 'price-label' %></span><br>
+    <span id='price-field'><%= form.text_field :price, class: 'price' %></span>
  </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'SUBMIT', :class => 'new-product-btn' %>
+
   </div>
 <% end %>
