--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -148,3 +148,72 @@ div.c-wrapper {
 .carousel-indicators {
   color: black;
 }
+
+
+
+
+
+/* Contact Page */
+
+
+
+.contact-page-title {
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  padding-top: 10%;
+}
+
+.contact-page {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+    width: 450px;
+    text-align: center;
+    margin-top: 5%;
+    margin-left: 35%;
+    position: relative;
+}
+
+.thanks-titles {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+}
+
+.form-control {
+  font-family: 'Raleway', sans-serif;
+  font-size: .7rem;
+}
+
+.form_label {
+  margin-left: 50%;
+  margin-bottom: 15%;
+  background-color: #20B2AA;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+
+}
+
+/*Thank You Page - Contact Form*/
+
+.thank-you-title {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  margin-top: 15%;
+}
+
+.thanks-page {
+  padding-top: 5px;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  margin-bottom: 45%
+}
