--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,2 +1,23 @@
-<h1>Have Questions? We're Here to Talk.</h1>
-<h2>We get new questions every day about our vinyl selections. If you have ideas for vinyl that we need to order, let us know.</h2>
+<h1 class="contact-page-title">Have Questions? We're Here to Talk.</h1>
+<h4 class= "contact-page">We get new questions every day about our vinyl selections. If you have ideas for vinyl that we need to order, let us know.</h4>
+
+
+<%= flash[:notice] %>
+
+<%= form_with(url:"/simple_pages/thank_you", method: "post", local: true) do |form| %>
+<div class="form-group">
+  <div class="field thank-you">
+    <%= form.label :name, class: "thanks-titles" %>
+    <%= form.text_field :name, class: "form-control", placeholder: "Enter Name" %>
+  </div>
+  <div class="field thank-you">
+    <%= form.label :email, class: "thanks-titles" %>
+    <%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
+  </div>
+<div class="field thank-you">
+    <%= form.label :message, class: "thanks-titles" %>
+    <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5 %>
+  </div>
+</div>
+<%= form.submit "Send", class: "form_label" %>
+<% end %>
