Adding Comment Option to Products

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,5 +20,10 @@
   <%= @product.price %>
 </p>
 
+<p>
+  <strong>What People Are Saying...</strong>
+<%= @product.highest_rating_comment %>
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
