--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,33 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class="container" id="single-product">
+  <div id="album-name">
+    <h2 id="single-product-title">Album Name:</h2>
+      <%= @product.name %>
+  </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+  <div id= "album-description">
+    <h2 id="single-product-title">Description:</h2>
+      <%= @product.description %>
+  </div>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
+  <div id ="album-image">
+    <h2 id= "single-product-title">Image url:</h2>
+      <%= @product.image_url %>
+  </div>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+  <div id="album-price">
+    <h2 id="single-product-title">Price:</h2>
+      <%= @product.price %>
+  </div>
 
-<p>
-  <strong>What People Are Saying...</strong>
-<%= @product.highest_rating_comment %>
-</p>
+  <div id="album-lowest-rating">
+      <%= @product.lowest_rating_comment.try(:rating) %>
+  </div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
+  <div id="album-highest-rating">
+      <%= @product.highest_rating_comment.try(:rating) %>
+  </div>
+</div>
+<%= link_to 'Edit', edit_product_path(@product) %>
 <%= link_to 'Back', products_path %>
