--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,13 @@
   <%= csrf_meta_tags %>
   <link href='https://fonts.googleapis.com/css?family=Montserrat|Cardo' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="/assets/jquery.js" type="text/javascript"></script>
+  <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
+
+
   <link href="https://fonts.googleapis.com/css?family=Raleway:300i" rel="stylesheet">
 
 
