--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,6 +1,7 @@
     <div class="col-sm">
        <%= image_tag(product.image_url, class: "img-fluid") %>
       <h1><%= link_to product.name, product %></h1>
+      <% logger.debug "Product name is #{product.name}"%>
       <p><%= product.description %></p>
       <strong>$ <%= product.price %></strong>
     </div><!-- /col -->
