--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <div id ="album-image">
-    <%= image_tag @product.image_url, class: 'list_image' %>
+    <%= image_tag(@product.image_url, width: "350", class: "img-zoom," data_zoom_image:"@product.image_url") %>
   </div>
 
   <div id="album-price">
