--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,7 +24,7 @@
   </div>
 
   <p>Average Rating:</p>
-    <div class="rated" data-score="<%= @product.average_rating %>"></div>
+    <div class="rated", id= "#average-rating", data-score="<%= @product.average_rating %>"></div>
 
   <%= form_with(url: '/payments/create') do |form| %>
     <%= render partial: "shared/stripe_checkout_button" %>
