--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,9 @@
 
 <div class="container-fluid">
   <div class="row">
+    <% cache(cache_key_for_products) do %>
     <%= render partial: "shared/product", collection: @products %>
+    <% end %>
   </div>
 </div>
 <br>
