Setting up ActionCable 6.13

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,6 +32,7 @@
 
   <%= render 'new_comment' %>
   <%= render 'comments' %>
+  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 
 
 
