--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <div class="product-reviews">
+  <% if current_user && current_user.admin? %>
     <% @comments.each do |comment| %>
       <%= render comment %>
     <% end %>
