--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,4 +1,18 @@
-<h1>So what's it all about anyway?</h1>
+<div class="container" id="about-page">
+    <h1 id="about-h1">About Us...</h1>
+    <br>
+    <br>
+    <br>
+</div>
 
+<div class="container" id="about-body">
+<br>
 <p>What's a world without music? We're here to make sure you keep your turntable moving with all the right songs. Explore our
   collection and enjoy hours of ear-pleasing tunes.</p>
+
+  <h2>Our Mission</h2>
+  <p>Our mission is pretty simple, we seek to offer the best vinyl to our community of music lovers at affordable prices. As fellow music connoisseurs, we relish the opportunity to provide oldies and newbies in the vinyl world.</p>
+  <br>
+  <br>
+  <br>
+</div>
