--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -153,6 +153,36 @@ div.c-wrapper {
 
 
 
+
+/*About Page*/
+
+
+h1#about-h1 {
+  font-size: 3rem;
+}
+
+#about-page.container {
+  background-image: image-url('sift_vinyl.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  color: #fff;
+  padding-top: 110px;
+  letter-spacing: 2px;
+  font-family: "Montserrat", sans-serif;
+  margin: 0px;
+  max-width: 2000px;
+}
+
+#about-page.container .h1 {
+  text-align: center;
+}
+
+#about-body.container {
+  text-align: center;
+}
+
+
 /* Contact Page */
 
 
