--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
 <div class="container-fluid" id="main-product-page">
   <div class="row" id="main-products">
     <% cache(cache_key_for_products) do %>
-    <%= render partial: "shared/product", collection: @products %>
+    <%= render partial: "products/product", collection: @products %>
     <% end %>
   </div>
 </div>
