body section of thank you page

--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -1,1 +1,9 @@
-<h1> Thank you for your order! Please feel free to browse the rest of our inventory! </h1>
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body>
+    <%= yield %>
+    <h1> Thank you for your order! Please feel free to browse the rest of our inventory! </h1>
+
+  </body>
+</html>
