--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,9 +23,9 @@
 
   <div id="album-price">
     <h2 id="single-product-title">Price:</h2>
-      <%= @product.price %>
+        <%= @product.price %>
         <%= render partial: "shared/stripe_checkout_button" %>
-    
+        <% end %>
   </div>
 
     <%= render 'new_comment' %>
