add payment button for stripe

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,7 @@
   <div id="album-price">
     <h2 id="single-product-title">Price:</h2>
         <%= @product.price %>
+         <%= form_with(url: '/payments/create') do |form| %>
         <%= render partial: "shared/stripe_checkout_button" %>
   </div>
 
