--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,8 @@
     <h2 id="single-product-title">Price:</h2>
         <%= @product.price %>
          <%= form_with(url: '/payments/create') do |form| %>
-        <%= render partial: "shared/stripe_checkout_button" %>
+           <%= render partial: "shared/stripe_checkout_button" %>
+         <% end %>
   </div>
 
     <%= render 'new_comment' %>
