spec update and sign-in update

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,9 +26,11 @@
         <%= @product.price %>
   </div>
 
+<% if signed_in? %>
   <%= form_with(url: '/payments/create') do |form| %>
     <%= render partial: "shared/stripe_checkout_button" %>
   <% end %>
+<% end %>
 
     <%= render 'new_comment' %>
     <%= render 'comments' %>
