--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,18 @@
         <%= @product.price %>
   </div>
 
-
+  <div>
+    <h6>
+              Views:
+              <span class="badge badge-pill badge-warning">
+                <%= @product.views %>
+              </span>
+              Latest reviewer:&nbsp;&nbsp;
+              <span class="badge badge-pill badge-warning">
+                <%= @product.get_recent_reviewer %>
+              </span>
+    </h6>
+  </div>
 
 <% if signed_in? %>
   <%= form_with(url: '/payments/create') do |form| %>
@@ -34,7 +45,18 @@
   <% end %>
 <% end %>
 
-
+<div>
+  <h6>
+            Views:
+            <span class="badge badge-pill badge-warning">
+              <%= @product.views %>
+            </span>
+            Latest reviewer:&nbsp;&nbsp;
+            <span class="badge badge-pill badge-warning">
+              <%= @product.get_recent_reviewer %>
+            </span>
+  </h6>
+</div>
 
     <%= render 'new_comment' %>
     <%= render 'comments' %>
