--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,6 +34,7 @@
   <% end %>
 <% end %>
 
+<div>
   <h6>
             Views:
             <span class="badge badge-pill badge-warning">
@@ -44,7 +45,7 @@
               <%= @product.get_recent_reviewer %>
             </span>
   </h6>
-
+</div>
 
     <%= render 'new_comment' %>
     <%= render 'comments' %>
